# quantum-finance-credit-score

./: .gitignore  Makefile  README.md  data.dvc  estrutura.txt  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: model_report.yml  notify_api_deploy.yml
documentacao/: documentacao_projeto_machine_learning_credit_score_quantum_finance.md  documentacao_tecnica_experimentacao_e_desenvolvimento_de_modelo_credit_score_quantum_finance.md  documentacao_tecnica_porocessamento_de_dados_credit_score_quantum_finance.md
models/: register_model.py
notebooks/: catboost_H2_classweights_cv5_results.csv  desenvolvimento-modelo.ipynb  processamento-dados.ipynb  xgb_rs_cv3_results.csv  xgb_rs_cv3_top3.csv
quantum_finance_credit_score/: __init__.py  dataset.py  features.py  plots.py
quantum_finance_credit_score/modeling/: predict.py  train.py
reports/: report.py
tests/: model_test.py
