[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "quantum_finance_credit_score"
version = "0.0.1"
description = "Score de cr\u00e9dito alternativo baseado em dados recentes, com entrega via API segura e integra\u00e7\u00e3o com app em Streamlit para empresas parceiras. Projeto completo com pipeline de ML, rastreamento e versionamento."
authors = [
  { name = "Daniel Estrella Couto" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["quantum_finance_credit_score"]
force_sort_within_sections = true


